离线地图下载 基础功能完善

--- a/tgtools-baidu-map-downloader/pom.xml
+++ b/tgtools-baidu-map-downloader/pom.xml
@@ -30,7 +30,7 @@
         <dependency>
             <groupId>com.github.tianjing</groupId>
             <artifactId>tgtools-baidu-map-common</artifactId>
-            <version>1.0</version>
+            <version>1.2-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
